<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_TLB4WeightState" Id="{56d6ef7b-d8c9-4c9b-b89e-26841e8644ea}">
    <Declaration><![CDATA[TYPE E_TLB4WeightState :
(**************************************************************************************
 * 	Application		:	BoxControl Framework
 *	Revision		:	$Revision: 411985 $
 *	Revision date	:	$Date: 2018-08-09 14:48:51 +0200 (tor, 09 aug 2018) $
 *	Last changed by	:	$Author: p8fiscp $
 *	URL				:	$URL: http://almscdc.swisslog.com/repo/SWPD/Development/ProMove/02_Controls/ProBox/03_Implementation/01_DevelopmentProject/01_Software/ProBox_COE/ProBox_DevProj_v1.0/PLC_1/20_Product/10_App/12_E_Functions/11_ProBox/92_TLB4WeightAddon/10_App/DUTs/E_TLB4W $
 *
 *	Purpose			:	TLB4 Weighing module state
 *
 * ------------------------------------------------------------------------------------
 *	Copyright Swisslog [IP AG], Switzerland. All rights reserved.
 * 
 * ------------------------------------------------------------------------------------
 *	
 * 	Revision History: 
 *
 * 	VERSION			DATE			INITIALS			DESCRIPTION
 *	0.1				01.01.2001		swl					Example
 *
 **************************************************************************************)	
(
	INIT,
	IDLE,
	READ,
	READY_FOR_TRANSPORT_OUT,
	ERROR,
	COMMISSIOING

);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>