<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_CFG_TLB4Weight" Id="{e354bc6c-f10b-4b6c-896e-faf16c7cf8e4}">
    <Declaration><![CDATA[TYPE ST_CFG_TLB4Weight :
(**************************************************************************************
 * 	Application		:	BoxControl Framework
 *	Revision		:	$Revision: 411985 $
 *	Revision date	:	$Date: 2018-08-09 14:48:51 +0200 (tor, 09 aug 2018) $
 *	Last changed by	:	$Author: p8fiscp $
 *	URL				:	$URL: http://almscdc.swisslog.com/repo/SWPD/Development/ProMove/02_Controls/ProBox/03_Implementation/01_DevelopmentProject/01_Software/ProBox_COE/ProBox_DevProj_v1.0/PLC_1/20_Product/10_App/12_E_Functions/11_ProBox/92_TLB4WeightAddon/10_App/DUTs/ST_CFG_ $
 *
 *	Purpose			:	TLB4 Weighing Ethercat module config
 *
 * ------------------------------------------------------------------------------------
 *	Copyright Swisslog [IP AG], Switzerland. All rights reserved.
 * 
 * ------------------------------------------------------------------------------------
 *	
 * 	Revision History: 
 *
 * 	VERSION			DATE			INITIALS			DESCRIPTION
*	0.1				2018-05-30		PkF/RtK				First version
 *
 **************************************************************************************)
STRUCT
	MaxWeight				: DINT; // Maximum allowed weight
	MinWeight				: DINT; // Minimum allowed weight
	MaxDiffFromZero			: DINT; // Allowed diff from zero to allow pallet transport in. 
	ResultMultiplier		: DINT := 1; // Multiplies the read, applied after all checks are done.
	WaitForStability		: BOOL; // Wait for the stability bit before copying the data to TU_Data
	EnableExternalTrigger	: BOOL; // Enable an external trigger for a real sensor or customization	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>