<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_HW_InputsTLB4Weight" Id="{261c55ac-7039-42e1-b337-09783de77984}">
    <Declaration><![CDATA[TYPE ST_HW_InputsTLB4Weight :
(**************************************************************************************
 * 	Application		:	BoxControl Framework
 *	Revision		:	$Revision: 411985 $
 *	Revision date	:	$Date: 2018-08-09 14:48:51 +0200 (tor, 09 aug 2018) $
 *	Last changed by	:	$Author: p8fiscp $
 *	URL				:	$URL: http://almscdc.swisslog.com/repo/SWPD/Development/ProMove/02_Controls/ProBox/03_Implementation/01_DevelopmentProject/01_Software/ProBox_COE/ProBox_DevProj_v1.0/PLC_1/20_Product/10_App/12_E_Functions/11_ProBox/92_TLB4WeightAddon/10_App/DUTs/ST_HW_I $
 *
 *	Purpose			:	HW inputs of the TLB4 Weighing module
 *
 * ------------------------------------------------------------------------------------
 *	Copyright Swisslog [IP AG], Switzerland. All rights reserved.
 * 
 * ------------------------------------------------------------------------------------
 *	
 * 	Revision History: 
 *
 * 	VERSION			DATE			INITIALS			DESCRIPTION
*	0.1				2018-05-30		PkF/RtK				First version
 *
 **************************************************************************************)	
STRUCT
	ByteIn0		: BYTE; // GrossWeight
	ByteIn1		: BYTE; // GrossWeight
	ByteIn2		: BYTE; // GrossWeight
	ByteIn3		: BYTE; // GrossWeight
	ByteIn4		: BYTE; // NetWeight
	ByteIn5		: BYTE; // NetWeight
	ByteIn6		: BYTE; // NetWeight
	ByteIn7		: BYTE; // NetWeight
	ByteIn8		: BYTE; // SetPoint
	ByteIn9		: BYTE; // SetPoint
	ByteIn10	: BYTE; // SetPoint
	ByteIn11	: BYTE; // SetPoint
	ByteIn12	: BYTE; // StatusRegister
	ByteIn13	: BYTE; // StatusRegister
	ByteIn14	: BYTE; // Digital Input Status
	ByteIn15	: BYTE; // Digital Input Status
	ByteIn16	: BYTE; // Digital Outputs Status
	ByteIn17	: BYTE; // Digital Outputs Status
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>