<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_HW_OutputsTLB4Weight" Id="{aba75f2a-0650-453a-91bb-9b9d55ac039e}">
    <Declaration><![CDATA[TYPE ST_HW_OutputsTLB4Weight :
(**************************************************************************************
 * 	Application		:	BoxControl Framework
 *	Revision		:	$Revision: 411985 $
 *	Revision date	:	$Date: 2018-08-09 14:48:51 +0200 (tor, 09 aug 2018) $
 *	Last changed by	:	$Author: p8fiscp $
 *	URL				:	$URL: http://almscdc.swisslog.com/repo/SWPD/Development/ProMove/02_Controls/ProBox/03_Implementation/01_DevelopmentProject/01_Software/ProBox_COE/ProBox_DevProj_v1.0/PLC_1/20_Product/10_App/12_E_Functions/11_ProBox/92_TLB4WeightAddon/10_App/DUTs/ST_HW_O $
 *
 *	Purpose			:	HW outputs TLB4 Weighing module
 *
 * ------------------------------------------------------------------------------------
 *	Copyright Swisslog [IP AG], Switzerland. All rights reserved.
 * 
 * ------------------------------------------------------------------------------------
 *	
 * 	Revision History: 
 *
 * 	VERSION			DATE			INITIALS			DESCRIPTION
*	0.1				2018-05-30		PkF/RtK				First version
 *
 **************************************************************************************)	
STRUCT
	ByteOut0		: BYTE; // Command Register
	ByteOut1		: BYTE; // Command Register
	ByteOut2		: BYTE; // Digital Output Command
	ByteOut3		: BYTE; // Digital Output Command
	ByteOut4		: BYTE; // SetPoint
	ByteOut5		: BYTE; // SetPoint
	ByteOut6		: BYTE; // SetPoint
	ByteOut7		: BYTE; // SetPoint
	ByteOut8		: BYTE; // ExchangeRegister
	ByteOut9		: BYTE; // ExchangeRegister

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>