<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_OutputsTLB4Weight" Id="{98757871-b8ac-4cd6-8cab-4e769b01305b}">
    <Declaration><![CDATA[TYPE ST_OutputsTLB4Weight :
(**************************************************************************************
 * 	Application		:	BoxControl Framework
 *	Revision		:	$Revision: 411985 $
 *	Revision date	:	$Date: 2018-08-09 14:48:51 +0200 (tor, 09 aug 2018) $
 *	Last changed by	:	$Author: p8fiscp $
 *	URL				:	$URL: http://almscdc.swisslog.com/repo/SWPD/Development/ProMove/02_Controls/ProBox/03_Implementation/01_DevelopmentProject/01_Software/ProBox_COE/ProBox_DevProj_v1.0/PLC_1/20_Product/10_App/12_E_Functions/11_ProBox/92_TLB4WeightAddon/10_App/DUTs/ST_Outp $
 *
 *	Purpose			:	Outputs of the TLB4 Weighing module
 *
 * ------------------------------------------------------------------------------------
 *	Copyright Swisslog [IP AG], Switzerland. All rights reserved.
 * 
 * ------------------------------------------------------------------------------------
 *	
 * 	Revision History: 
 *
 * 	VERSION			DATE			INITIALS			DESCRIPTION
*	0.1				2018-05-30		PkF/RtK				First version
 *
 **************************************************************************************)	
STRUCT
	//CommandRegister			: WORD; // 0x0000 - 0x0001
	DigitalOutputCommand	: WORD; // 0x0002 - 0x0003
	SetPoint				: DWORD; // 0x0004 - 0x0007
	uOutputCommand: U_HW_OutputCommands;
	uExchangeRegister: U_HW_OutputExchangeRegister;
	Weight					: DINT; //current weight on last measured pallet
	EnableTakeover			: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>