<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_TLB4WeightStates" Id="{97538699-4dcc-49b2-8212-d9b8e9406a52}">
    <Declaration><![CDATA[TYPE ST_TLB4WeightStates :
(**************************************************************************************
 * 	Application		:	BoxControl Framework
 *	Revision		:	$Revision: 411985 $
 *	Revision date	:	$Date: 2018-08-09 14:48:51 +0200 (tor, 09 aug 2018) $
 *	Last changed by	:	$Author: p8fiscp $
 *	URL				:	$URL: http://almscdc.swisslog.com/repo/SWPD/Development/ProMove/02_Controls/ProBox/03_Implementation/01_DevelopmentProject/01_Software/ProBox_COE/ProBox_DevProj_v1.0/PLC_1/20_Product/10_App/12_E_Functions/11_ProBox/92_TLB4WeightAddon/10_App/DUTs/ST_TLB4 $
 *
 *	Purpose			:	TLB4 Weighing module states
 *
 * ------------------------------------------------------------------------------------
 *	Copyright Swisslog [IP AG], Switzerland. All rights reserved.
 * 
 * ------------------------------------------------------------------------------------
 *	
 * 	Revision History: 
 *
 * 	VERSION			DATE			INITIALS			DESCRIPTION
*	0.1				2018-05-30		PkF/RtK				First version
 *
 **************************************************************************************)
STRUCT
	eState			: E_TLB4WeightState; // State
	eLastState		: E_TLB4WeightState; // Last state
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>